2007-09-30  Stephane Charette <stephanecharette@gmail.com>
	* src/data/main*.css: 0001266: Narrative web report: gallery images
	don't show up correctly in IE7

2007-09-30  Gary Burton <gary.burton@zen.co.uk>
	* src/plugins/NarrativeWeb.py: 0001236: Narrative web report: If the event 
	has no date, there's no place (Issue #0001236)

2007-09-29  Alex Roitman  <shura@gramps-project.org>
	* data/grampsxml.rng: Add region to objref.
	* data/grampsxml.dtd: Add region to objref.

2007-09-29 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/GrampsDb/_ReadXML.py: read region tag in xml
	* src/GrampsDb/_WriteXML.py: output region tag in xml (=subsection of picture)
	* src/Editors/_EditMediaRef.py: make sure rectangle is none if nothing given

2007-09-29 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/GrampsDb/_ReadXML.py: remove bug: no more creation of objects if bookmark is found with
	handle that is not in database. This causes corruption of database!
	* src/GrampsDb/_GrampsDbBase.py: person bookmarks do not work after save. Correct. Issue #1260

2007-09-28 James G. Sack <jgsack@san.rr.com>
	* src/RecentFiles.py:
	* src/GrampsDb/_GrampsDbBase.py:
	0001187: Runaway Gramps XML file sizes

2007-09-27  Benny Malengier <benny.malengier@gramps-project.org> 
	* src/FilterEditor/_EditRule.py: wrong filter selection, bug #807
	Based on work Johan

2007-09-26 James G. Sack <jgsack@san.rr.com>
	* src/plugins/Check.py: same sex marriage need not be CIVIL_UNION, bug #1245

2007-09-19  Benny Malengier <benny.malengier@gramps-project.org> 
	* src/GrampsDb/_ReadGedcom.py: empty gedcom gives error message, not crash

2007-09-13  Benny Malengier <benny.malengier@gramps-project.org> 
	* src/Exporter.py: temporarely fix bug invalid filename. This has been
	completely rewritten for 3.0

2007-08-31  Benny Malengier <benny.malengier@gramps-project.org> 
	* src/PlaceUtils.py: request #1199: replace unicode symbols with u codes
